# manager-server

./: .gitignore  appspec.yml  docker-compose.yml  init-letsencrypt.sh  manage.py  pyproject.toml  pytest.ini  start.sh
.github/: pull_request_template.md
.github/workflows/: main.yml
accounts/: models.py  urls.py
accounts/domain/: is_admin_user.py  member.py  organization.py
accounts/migrations/: 0001_initial.py  0002_alter_member_options.py  0003_member_last_login.py
accounts/models/: is_admin_user.py  member.py
accounts/views/: login_views.py  permission_test_view.py
config/nginx/: Dockerfile  nginx.conf
config/scripts/: docker_compose_command.sh  pull_images_from_ecr.sh  stop_docker.sh
config/web/: Dockerfile
game/: containers.py  urls.py
game/application/: __init__.py  game_serivice.py  game_service.py  game_team_get_service.py  game_team_player_service.py  game_team_serivce.py  lineup_player_service.py
game/domain/: __init__.py  game.py  game_repository.py  game_team.py  game_team_player.py  lineup_players.py
game/models/: game.py
game/presentation/: __init__.py  game_change_view.py  game_extra_view.py  game_get_view.py  game_score_view.py  game_team_get_view.py  game_team_player_get_view.py  (+5 more)
league/: containers.py  urls.py
manage/: app_config.py  apps.py  containers.py  urls.py
record/: containers.py  urls.py
report/: containers.py  urls.py
scripts/: pull_images_from_ecr.sh  start_server.sh  stop_docker.sh
sport/: containers.py  urls.py
sports_live/: urls.py
team/: containers.py  urls.py
utils/: s3.py  sqs.py  upload_to_s3.py
(+245 files in other folders)
